Nano.Azure.Kubernetes.RabbitMQ/.kubernetes/rabbitmq-network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: %APP_NAME%-policy
  namespace: %KUBERNETES_NAMESPACE%
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: %APP_NAME%
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - from:
        - podSelector: {}
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: rabbitmq-system
  egress:
    - to:
        - podSelector: {}
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: rabbitmq-system
    - ports:
        - port: 53
          protocol: UDP
        - port: 53
          protocol: TCP
